# SDDB

./: .gitignore  LICENSE  README.md  README_en.md  config.py  models.py  pyproject.toml  requirements.txt
src/: app.py  celerybeat-schedule.dir  init_db.py  models.py
src/alerts/: __init__.py  celery_config.py  notifiers.py  rules.py
src/api/fhir/: __init__.py  resources.py  serializers.py
src/blueprints/: admin.py  auth.py  doctor.py  patient.py  worker.py
src/realtime/: __init__.py  dashboard_metrics.py  socketio_server.py
src/services/: prescription_service.py  task_service.py  user_service.py
src/static/css/: admin_user.css  assign_tasks.css  base.css  dashboard.css  profile.css
src/static/js/: admin_user.js  assign_tasks.js  dashboard_realtime.js
src/templates/: admin_alerts.html  admin_dashboard.html  admin_users.html  assign_tasks.html  base.html  create_prescription.html  dashboard.html  doctor_prescriptions.html  edit_user.html  patient_prescription_detail.html  patient_prescriptions.html  profile.html  register.html
src/templates/components/: footer.html  navbar.html
static/css/: assign_tasks.css  base.css
static/js/: admin_user.js  assign_tasks.js  profile.js  register.js
templates/: admin_users.html  assign_tasks.html  dashboard.html  doctor_prescription_detail.html  edit_user.html  login.html  update_task.html  worker_tasks.html
templates/components/: flash_messages.html  navbar.html
